@startuml
hide empty description
state Init
state Loading
state Error
state CurrencyList

[*] --> Init
Init -[#blue]-> Loading : <color blue>Insert</color>
Init -[#blue]-> Loading : <color blue>Clear</color>
Init -[#blue]-> Loading : <color blue>ShowCryptos</color>
Init -[#blue]-> Loading : <color blue>ShowFiats</color>
Init -[#blue]-> Loading : <color blue>Search</color>
Loading --> Init : ActionSuccess
Loading --> CurrencyList : ShowDataSuccess
Loading --> Error : ToError
CurrencyList --> Init : Done
Error --> Init : Done

@enduml